# Trading-Bot

./: .env.example  .gitignore  .rag_ingestion_state.json  ARCHITECTURE.md  AUTHORITY_MATRIX.md  CONSOLIDATION_PLAN.md  PRODUCTION_RUNTIME_PATH.md  RUNTIME_FLOW.md  main.py  pyproject.toml  trading_system.db
backend/: Dockerfile  pyproject.toml  refactor_tests.py
backend/config/: settings.yaml
backend/data/: trading_system.db.bak
backend/docs/: API-docs.md  README.md
backend/src/: main.py
backend/tests/: test_adaptive_weighting.py  test_adjusted_timestamp.py  test_advanced_performance.py  test_alert_manager.py  test_asymmetric_grid.py  test_async_runtime_loop_validation.py  test_auth_headers.py  test_autonomous_decay.py  test_backtest_engine.py  test_binance_engine_dependencies.py  test_binance_execution_factory.py  test_binance_signature.py  test_binance_time_sync.py  test_binance_ws.py  test_capital_governance.py  test_circuit_breaker.py  test_consistency_state.py  test_correlation.py  test_diversification.py  test_drawdown_tracker.py  test_drift_detector.py  test_dynamic_position_sizer.py  test_dynamic_scaling.py  test_empty_balance_payload.py  test_env_loader.py  test_event_bus.py  test_event_journal_validation.py  test_event_parser.py  test_event_store.py  test_execution_engine.py  test_execution_factory.py  test_execution_fees.py  test_execution_latency.py  test_execution_simulator.py  test_financial_runtime.py  test_governance_runtime_validation.py  test_governed_runtime.py  test_grid_anchor.py  test_grid_protection.py  test_hierarchy.py  (+49 more)
docs/: README.md
(+475 files in other folders)
